--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "prompt-genrator"
 version = "0.1.0"
-description = "Add your description here"
+description = "The most imp thing needed by eveyone in this ai era"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [groq]
